namespace Game
{
    internal static class AnimParameter
    {
        public const string IsReady = "isReady";
        public const string IsRunning = "isRunning";
        public const string IsAttacking = "isAttacking";
        public const string GotHit = "gotHit";
        public const string IsKilled = "isKilled";
        public const string IsFinishingOff = "isFinishingOff";

        public const string AttackType = "AttackType";
        public const int DefaulAttackType = 0;
        public const int AttackType_one = 1;
        public const int AttackType_two = 2;

        public const string GotHitType = "GotHitType";
        public const int DefaultGotHitType = 0;
        public const int GotHitType_one = 1;
        public const int GotHitType_two = 2;

        public const string DeathType = "DeathType";
        public const int DefaultDeathType = 0;
        public const int DeathType_one = 1;
        public const int DeathType_two = 2;

        public const string DiceNumber = "Number";
    }
}
