namespace Game
{
    internal static class CharState
    {
        public const string IsReady = "isReady";
        public const string IsRunning = "isRunning";
        public const string IsAttacking = "isAttacking";
        public const string GotHit = "gotHit";
        public const string IsKilled = "isKilled";
        public const string IsFinishingOff = "isFinishingOff";
    }
}
